# reassignplayer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  readme.txt  reassignmentJUCE.jucer.template
Assets/FilterBanks/: 8192_default.lfb  default.lfb  default_fgrad.lfb
Source/: 8192_default_fgrad.lfb  8192_default_tgrad.lfb  AudioHandler.cpp  AudioHandler.h  CustomToolbarButton.cpp  CustomToolbarButton.h  FilterbankDataHolder.cpp  FilterbankDataHolder.h  Main.cpp  MainContentComponent.cpp  MainContentComponent.h  MainGuiWidgets.cpp  MainGuiWidgets.h  OverlapFifo.cpp  OverlapFifo.h  ReassignedBLFilterbank.cpp  ReassignedBLFilterbank.h  Spectrogram.cpp  Spectrogram.h  default_tgrad.lfb  generateColormaps.m  getthathcolormap.py  inferno.m  ltfatColormaps.h  magma.m  plasma.m  viridis.m
plugin/: plugin.jucer  plugin.jucer.template
plugin/Source/: 2048_44100_erb.lfb  2048_44100_erb_fgrad.lfb  2048_44100_erb_tgrad.lfb  44100_newtest.lfb  44100_newtest_fgrad.lfb  44100_newtest_tgrad.lfb  44100_test.lfb  44100_test_fgrad.lfb  44100_test_tgrad.lfb  FilterbankDataHolder.cpp  FilterbankDataHolder.h  PluginBinaryData.cpp  PluginBinaryData.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RingTransformBuffer.cpp  RingTransformBuffer.h  Spectrogram.cpp  Spectrogram.h  generateColormaps.m  ltfatColormaps.h  read_filterbank_bin.m  write_filterbank_bin.m  write_phasegradfilters_bin.m
standalone/: standalone.jucer  standalone.jucer.template
standalone/JuceLibraryCode/: BinaryData.cpp  BinaryData.h
standalone/Source/: AudioSourceProcessor.cpp  AudioSourceProcessor.h  CustomToolbarButton.cpp  Main.cpp  MainComponent.cpp  MainComponent.h  NewComponent.h  StandaloneFilterWindow.cpp  StandaloneFilterWindow.h  StandalonePluginHolder.cpp  StandalonePluginHolder.h  juce_StandaloneFilterWindow.h
